Create page home and ajusted of back-end

--- a/front-end/login.html
+++ b/front-end/login.html
@@ -64,6 +64,7 @@
         </div><!-- __display -->
     </main>
 
+    <section id="loader-wrapper"><div class="loader"></div></section><!-- loader-wrapper -->
     <section id="alertMessage" class="__alert"></section><!-- __alert -->
 </body>
 
