--- a/front-end/room.html
+++ b/front-end/room.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>HOME</title>
+    <title>ROOM</title>
 </head>
 
 <body class="home --background_animated">
